# address/v1/api.pb.validate.go
@@ -187,6 +187,10 @@ func (m *NewBip44Result) validate(all bool) error {
 
 	// no validation rules for Id
 
+	// no validation rules for WalletAddressPKH
+
+	// no validation rules for WalletAddressWPKH
+
 	if len(errors) > 0 {
 		return NewBip44ResultMultiError(errors)
 	}
