# openapi.yaml
@@ -399,6 +399,10 @@ components:
                     type: string
                 id:
                     type: string
+                walletAddressPKH:
+                    type: string
+                walletAddressWPKH:
+                    type: string
         SendTranReply:
             type: object
             properties:
